# pdb-mine-builder

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  config.docker.yml  config.example.yml  config.test.yml  config.yml  do-update.sh  docker-compose.yml  jsconfig.json  mine2.js  package.json  pixi.toml  pyproject.toml  setup-test-db.sh  tsconfig.json
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
alembic/: env.py
alembic/versions/: bf39ba596b4a_prd_family_replace_docid_with_name_in_.py
docker/: docker-compose.test.yml
docker/init/: 01-extensions.sql
docs/: architecture.md  pipelines.md  schema.md
modules/: cif.js  general.js  pg-native-custom.js  rdb-helper.js  rdb-loader.js  rdb-worker.js
pipelines/: cc.load.js  ccmodel.load.js  contacts.load.js  emdb.load.js  ihm.load.js  pdbj.load.js  prd.load.js  vrpt.load.js
plans/: README.md  investigation-cif-pipelines.md  investigation-cif-tests.md  investigation-parser-formats.md  investigation-utils-compatibility.md  next-features.md  phase-1-type-coercion.md  phase-2-mmjson-utils.md  phase-3-delta-updates.md  phase-4-missing-pipelines.md  phase-5-advanced-features.md  toasty-prancing-dawn.md
schemas/: cc.def.yml  ccmodel.def.yml  contacts.def.yml  emdb.def.yml  ihm.def.yml  pdbj.def.yml  pkout.json  prd.def.yml  prd_family.def.yml  sifts.def.yml  vrpt.def.yml
scripts/: cif2json.py  convert_yaml_to_sa.py  generate_er_diagrams.py  generate_rdb_docs.py  generate_schema_docs.py  init_rdkit.sql  inject_column_comments.py  patch-libpq.js  postgresql_bulkload.conf  postgresql_safe.conf  postgresql_tuned.conf  rdkit_functions.sql  reload_failed.py  verify_schema_equivalence.py
src/: mine2.ts
tests/: __init__.py  conftest.py  test_assembly.py  test_base.py  test_brief_summary.py  test_cc_cif.py  test_ccmodel_cif.py  test_commands.py  test_delta.py  test_emdb.py  test_environment.py  test_format_parity.py  test_ihm.py  test_loader_migration.py  test_metadata.py  test_mmjson.py  test_model_registry.py  test_mtime_filtering.py  test_parsers.py  test_patches.py  test_pdbj.py  test_pdbj_cif.py  test_prd_cif.py  test_prd_family_cif.py  test_query.py  test_sifts.py  test_type_utils.py
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
(+179 files in other folders)
