[project]
name = "pdbminebuilder"
version = "0.2.0"
description = "PDBj data synchronization and database loading tool"
requires-python = ">=3.12"

[project.scripts]
pmb = "pdbminebuilder.cli:app"

[tool.pytest.ini_options]
markers = [
    "integration: mark test as integration test (requires database)",
]
testpaths = ["tests"]
