[project]
name = "pdbminebuilder"
version = "0.2.1"
description = "PDBj data synchronization and database loading tool"
license = "MIT"
requires-python = ">=3.12"
readme = "README.md"
authors = [{ name = "nagaet" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Database",
]
dependencies = [
    "alembic>=1.13.0",
    "ccd2rdmol>=0.2.0",
    "defusedxml>=0.7.0",
    "gemmi>=0.7.0",
    "polars>=1.0.0",
    "psycopg[binary,pool]>=3.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "sqlalchemy>=2.0.0",
    "typer>=0.15.0",
]

[project.urls]
Homepage = "https://github.com/N283T/pdb-mine-builder"
Documentation = "https://n283t.github.io/pdb-mine-builder/"
Repository = "https://github.com/N283T/pdb-mine-builder"
Changelog = "https://github.com/N283T/pdb-mine-builder/blob/main/CHANGELOG.md"

[project.scripts]
pmb = "pdbminebuilder.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdbminebuilder"]

[tool.pytest.ini_options]
markers = [
    "integration: mark test as integration test (requires database)",
]
testpaths = ["tests"]
